--- a/frontend/public/scss/v2/home.scss
+++ b/frontend/public/scss/v2/home.scss
@@ -2,8 +2,12 @@
 .featured-product-section h1 {
   color: $home-page-header-blue;
   text-align: left;
-  padding: 50px 10%;
+  font-size: 25px;
   margin: 0;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  padding: 60px 0 33px 0;
   @include media-breakpoint-down(sm) {
     font-size: 30px;
     padding: 20px 0;
