--- a/cms/templates/home_page.html
+++ b/cms/templates/home_page.html
@@ -18,51 +18,64 @@
     </div>
   </div>
 </div>
-  {{ show_new_featured_carousel }}
 {% if show_new_featured_carousel %}
-  <div class="featured-product-section">
-    <div class="container">
-      {% if product_cards_section_title %}
-        <h1>{{ product_cards_section_title }}</h1>
-      {% endif %}
-      <ul class="featured-product-listing card-listing">
-        {% for product in products %}
-        <li>
-          <div class="featured-product-card highlight-card clickable">
-            <a href="{{ product.url_path }}" class="featured-product-card-link">
-              <img src="{% feature_img_src product.feature_image %}" alt="">
-              {% if show_new_featured_carousel and product.is_program and product.program_type %}
-                <span class="badge badge-program-type">{{ product.program_type }}program</span>
-              {% endif %}
-              <div class="featured-product-info">
-                {% if product.start_date and not product.is_program and show_new_featured_carousel %}
-                  <span class="date">
-                    Starts {{ product.start_date | date:"F j, Y" }}
-                  </span>
-                {% elif not product.is_program %}
-                  <span class="date">
-                    Start Anytime
-                  </span>
+  <div class="featured-product-section-container container">
+    <div class="featured-product-section carousel slide" id="featuredProductCarousel">
+      <div class="featured-product-header">
+        {% if product_cards_section_title %}
+          <div class="featured-product-header-title">{{ product_cards_section_title }}</div>
+        {% endif %}
+        <div class="featured-product-arrows">
+          <a href="#featuredProductCarousel" role="button" data-bs-slide="prev">
+            <img class="arrow prev-arrow" src="/static/images/featured-products-left-arrow.svg" alt="Previous Arrow" />
+          </a>
+          <a href="#featuredProductCarousel" role="button" data-bs-slide="next">
+            <img class="arrow next-arrow" src="/static/images/featured-products-right-arrow.svg" alt="Next Arrow" />
+          </a>
+        </div>
+      </div>
+      <div class="featured-product-listing">
+        <div class="carousel-inner" role="listbox">
+          {% for product in products %}
+          <div class="carousel-item{% if forloop.counter == 1 %} active{% endif %} ">
+            <div class="card featured-product-card">
+              <a href="{{ product.url_path }}" class="featured-product-card-link">
+              <div class="featured-product-thumb">
+                <img src="{% feature_img_src product.feature_image %}" alt="" />
+                {% if product.is_program and product.program_type %}
+                  <span class="badge badge-program-type">{{ product.program_type }}</span>
                 {% endif %}
-                <h2 class="featured-product-card-title">
+              </div>
+              <div class="featured-product-info card-body">
+                {% if product.start_date and not product.is_program and show_new_featured_carousel %}
+                  <p class="date">
+                    Starts {{ product.start_date | date:"F j, Y" }}
+                  </p>
+                {% elif not product.is_program %}
+                  <p class="date">
+                    Start Anytime
+                  </p>
+                {% endif %}
+                <h2 class="featured-product-card-title card-title">
                     {{ product.title }}
                 </h2>
-                <div class="featured-product-card-description">
-                  {{ product.description | richtext }}
-                </div>
               </div>
-            </a>
+              </a>
+            </div>
           </div>
-        </li>
-        {% endfor %}
-      </ul>
+          {% endfor %}
+        </div>
+      </div>
+    <div class="featured-product-navigation">
+      <button type="button" href="" class="view-catalog-button">View MITx Online Catalog</button>
+    </div>
     </div>
   </div>
 {% else %}
   <div class="course-section">
     <div class="container">
       {% if product_cards_section_title %}
-        <h1>{{ product_cards_section_title }} potato</h1>
+        <h1>{{ product_cards_section_title }}</h1>
       {% endif %}
       <ul class="course-listing card-listing">
         {% for product in products %}
@@ -91,4 +104,22 @@
     </div>
   </div>
 {% endif %}
+{% endblock %}
+{% block scripts %}
+<script>
+let items = document.querySelectorAll('.carousel .carousel-item')
+
+items.forEach((el) => {
+    const minPerSlide = 4
+    let next = el.nextElementSibling
+    for (var i=1; i<minPerSlide; i++) {
+        if (!next) {
+        	next = items[0]
+      	}
+        let cloneChild = next.cloneNode(true)
+        el.appendChild(cloneChild.children[0])
+        next = next.nextElementSibling
+    }
+})
+</script>
 {% endblock %}
