--- a/frontend/public/scss/v2/featured-product-cards.scss
+++ b/frontend/public/scss/v2/featured-product-cards.scss
@@ -5,6 +5,10 @@
   flex-direction: column;
   padding: 0;
   max-width: 1440px;
+  @include media-breakpoint-down(sm) {
+    width: 100%;
+    margin: 0;
+  }
 
   .featured-product-section {
     display: flex;
@@ -15,6 +19,12 @@
     background-size: cover;
     flex-direction: column;
     align-items: center;
+    @include media-breakpoint-down(sm) {
+      width: 100%;
+      height: 450px;
+      background-image: unset;
+      background-color: $home-page-grey-lite;
+    }
 
     .featured-product-header {
       width: 1344px;
@@ -24,6 +34,10 @@
       fill: $home-page-grey-lite;
       display: flex;
       align-content: space-between;
+      @include media-breakpoint-down(sm) {
+        width: 100%;
+        padding-top: 0;
+      }
 
       .featured-product-header-title {
         color: $home-page-header-blue;
@@ -31,6 +45,12 @@
         font-style: normal;
         font-weight: 700;
         line-height: normal;
+        @include media-breakpoint-down(sm) {
+          width: 176px;
+          font-size: 18px;
+          margin-left: 15px;
+          margin-top: 30px;
+        }
       }
 
       .featured-product-arrows {
@@ -38,6 +58,10 @@
         align-items: flex-start;
         gap: 10px;
         margin-left: auto;
+        @include media-breakpoint-down(sm) {
+          margin-right: 15px;
+          margin-top: 30px;
+        }
 
         .arrow {
           display: flex;
@@ -63,11 +87,18 @@
       display: flex;
       margin: 40px auto 0 auto;
       width: 1344px;
-      height: 277px;
+      height: 238px;
       justify-content: flex-end;
       align-items: center;
       flex-shrink: 0;
       padding-bottom: 17px;
+
+      @include media-breakpoint-down(sm) {
+        width: 100%;
+        margin-top: 30px;
+        align-items: unset;
+        padding-bottom: 0;
+        }
 
       .carousel-inner {
         overflow-y: unset;
@@ -80,6 +111,11 @@
             border-radius: 5px;
             background: white;
             box-shadow: 0 2px 3px 0 rgba(18, 38, 49, 0.15);
+            @include media-breakpoint-down(sm) {
+              width: 282px;
+              margin: auto;
+              height: 238px;
+              }
 
             a {
               text-decoration: none;
@@ -133,7 +169,7 @@
         }
       }
 
-      @media (max-width: 767px) {
+      @include media-breakpoint-down(sm) {
         .carousel-inner .carousel-item > div {
           display: none;
         }
@@ -149,7 +185,7 @@
       }
 
       /* medium and up screens */
-      @media (min-width: 768px) {
+      @include media-breakpoint-up(md)  {
 
         .carousel-inner .carousel-item-end.active,
         .carousel-inner .carousel-item-next {
@@ -173,6 +209,10 @@
       display: flex;
       margin-top: 17px;
       width: 1344px;
+      @include media-breakpoint-down(sm) {
+        width: 100%;
+        margin-top: 30px;
+        }
 
       .view-catalog-button {
         display: flex;
@@ -191,6 +231,10 @@
         background-color: transparent;
         align-self: center;
         margin: auto;
+        @include media-breakpoint-down(sm) {
+          width: 100%;
+          margin: 0 15px 0 15px;
+        }
       }
     }
   }
