--- a/frontend/public/scss/layout-v2.scss
+++ b/frontend/public/scss/layout-v2.scss
@@ -28,6 +28,7 @@
 @import "certificates/certificate";
 @import "learner-records";
 @import "order-history";
+@import "home-page-hero";
 
 body {
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
