fix title div flex

--- a/cms/templates/home_page.html
+++ b/cms/templates/home_page.html
@@ -10,7 +10,7 @@
   <div class="home-page-hero-row d-flex justify-content-md-center align-items-md-center">
     <div class="home-page-hero hero-container col-12">
       <div class="home-page-hero-overlay container hero-content d-flex justify-content-md-end align-items-md-end">
-        <div class="hero-title hero-text d-sm-flex justify-content-sm-center">
+        <div class="hero-title hero-text">
             <h1>MITx Online</h1>
             <h2>Open Online Courses - from MIT</h2>
             <p>
