--- a/frontend/public/scss/layout-v2.scss
+++ b/frontend/public/scss/layout-v2.scss
@@ -29,6 +29,7 @@
 @import "learner-records";
 @import "order-history";
 @import "home-page-hero";
+@import "home-page-video-component";
 
 body {
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
