--- a/frontend/public/scss/layout.scss
+++ b/frontend/public/scss/layout.scss
@@ -27,6 +27,7 @@
 @import "certificates/certificate";
 @import "learner-records";
 @import "order-history";
+@import "home-page-video-component";
 
 body {
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
