adding the course card CSS back, updates to serializer for program page

--- a/frontend/public/scss/meta-product-page.scss
+++ b/frontend/public/scss/meta-product-page.scss
@@ -4,6 +4,7 @@
 @import "product-page/user-menu";
 @import "product-page/product-details";
 @import "product-page/product-faculty-members";
+@import "product-page/program-courses";
 
 body.new-design {
     background: white;
