Update catalog item image formatting

--- a/frontend/public/scss/catalog.scss
+++ b/frontend/public/scss/catalog.scss
@@ -351,6 +351,8 @@
                 height: 142px;
                 border-radius: 5px 5px 0px 0px;
                 background: rgba(0, 0, 0, 0.20);
+                object-position: center;
+                object-fit: cover;
             }
 
             .program-type-badge {
