--- a/frontend/public/scss/v2/featured-product-cards.scss
+++ b/frontend/public/scss/v2/featured-product-cards.scss
@@ -12,7 +12,8 @@
 
   .featured-product-section {
     display: flex;
-    width: 1440px;
+    width: 100%;
+    max-width: 1440px;
     height: 520px;
     flex-shrink: 0;
     background-image: url('/static/images/featured-product-rectangle.svg');
@@ -27,7 +28,8 @@
     }
 
     .featured-product-header {
-      width: 1344px;
+      max-width: 1344px;
+      width: 93.333333%;
       margin: 0 auto;
       padding-top: 60px;
       flex-shrink: 0;
@@ -86,7 +88,8 @@
     .featured-product-listing {
       display: flex;
       margin: 40px auto 0 auto;
-      width: 1344px;
+      max-width: 1344px;
+      width: 93.333333%;
       height: 238px;
       justify-content: flex-end;
       align-items: center;
@@ -233,7 +236,7 @@
         margin: auto;
         @include media-breakpoint-down(sm) {
           width: 100%;
-          margin: 0 15px 0 15px;
+          max-width: 280px;
         }
       }
     }
