--- a/cms/templates/product_page.html
+++ b/cms/templates/product_page.html
@@ -2,10 +2,150 @@
 
 {% load static wagtail_img_src feature_img_src %}
 {% load wagtailcore_tags wagtailembeds_tags %}
+{% load expand %}
 
 {% block title %}{{ page.title }} | {{ site_name }}{% endblock %}
 
 {% block content %}
+{% if new_design %}
+    <div id="main" class="product-page">
+      <div class="container">
+        <div class="row d-flex flex-row">
+          <div class="col flex-grow-1" id="product-details">
+            <div class="text">
+              <h1>{{ page.title }}</h1>
+              {# Description field contents are already rendered wrapped in a <p> tag #}
+              
+              <section class="course-description">
+                {{ page.description | richtext }}
+              </section>
+
+              <nav id="tab-bar">
+                <ul class="nav">
+                  {% if page.about %}<li class="nav-item"><a href="#about-this-class">About</a></li>{% endif %}
+                  {% if page.what_you_learn %}<li class="nav-item"><a href="#what-youll-learn">What you'll learn</a></li>{% endif %}
+                  {% if instructors %}<li class="nav-item"><a href="#instructors">Instructors</a></li>{% endif %}
+                  {% if page.faq_url %}<li class="nav-item"><a href="{{page.faq_url}}" target="_blank">FAQs</a></li>{% endif %}
+                </ul>
+              </nav>
+
+              {% if page.about %}<section class="about-this-class about-richtext-container" id="about-this-class">
+                {{ page.about | richtext | expand }}
+              </section>{% endif %}
+
+              {% if page.what_you_learn %}<section class="what-youll-learn about-richtext-container" id="what-youll-learn">
+                <h2>What you&apos;ll learn</h2>
+                {{ page.what_you_learn |richtext }}
+              </section>{% endif %}
+    
+              {% if instructors or page.faculty_members %}
+              <section class="faculty-section" id="instructors">
+                <div class="container">
+                  <h2>{{ page.faculty_section_title }}</h2>
+                  <ul class="faculty-members card-listing">
+                    {% if instructors %}
+                    {% for member in instructors %}
+                      <li>
+                        <div class="member-card highlight-card" onClick="$('#instructor-modal-{{ member.id }}').modal('show');">
+                          <img src="{% feature_img_src member.feature_image %}" alt="">
+                          <div class="member-info">
+                            <h3 class="name">
+                                {{ member.instructor_name }}
+                            </h3>
+                            {% if member.instructor_title %}<h4 class="title">{{ member.instructor_title }}</h4>{% endif %}
+                            <div class="description">{{ member.instructor_bio_short|safe }}</div>
+                          </div>
+                        </div>
+                      </li>
+                    {% endfor %}
+                    {% endif %}
+                  </ul>
+                </div>
+              </section>
+              {% endif %}
+
+              <section class="ofac-message border">
+                <div class="container">
+                  <h2>Who can take this course?</h2>
+        
+                  <p>Because of U.S. Office of Foreign Assets Control (OFAC) restrictions and other U.S. federal regulations, learners residing in one or more of the following countries or regions will not be able to register for this course: Iran, Cuba, Syria, North Korea and the Crimea, Donetsk People's Republic and Luhansk People's Republic regions of Ukraine.</p>
+                </div>
+              </section>
+        
+            </div>
+          </div>
+          <div class="col" id="product-info-box">
+            <div class="px-4 py-2 border align-items-center justify-items-top d-flex flex-column">
+              <div class="hero-media">
+                {% if page.video_url %}
+                <video-js
+                  class="vjs-default-skin vjs-big-play-centered"
+                  controls
+                  data-setup="{{page.video_player_config}}"
+                  preload="metadata"
+                >
+                </video-js>
+                {% else %}
+                <img src="{% feature_img_src page.feature_image %}" alt="">
+                {% endif %}
+              </div>
+
+              {% if page.course %}
+              <div class="stats-row product-info-box-body">
+                <input id="courseId" type="hidden" value="{{page.course.readable_id}}" />
+                <div class="w-100" id="productDetailEnrollment"></div>
+              </div>
+              <div class="stats-row">
+                <div class="w-100" id="upsellCard"></div>
+              </div>
+              {% endif %}
+            </div>
+          </div>
+
+          {% if instructors %}
+          {% for member in instructors %}
+          <div class="modal instructor-modal" tabindex="-1" id="instructor-modal-{{ member.id }}">
+            <div class="modal-dialog modal-dialog-centered">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title">{{ member.instructor_name }}</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close" onClick="$('#instructor-modal-{{ member.id }}').modal('hide');">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                  <div class="row d-flex">
+                    <div class="col col-instructor-photo">
+                      <img class="img-thumbnail" src="{% feature_img_src member.feature_image %}" alt="Photo for {{member.instructor_name}}" />
+                    </div>
+                    <div class="col col-instructor-title flex-grow-1">
+                      <h2>{{member.instructor_name}}</h2>
+                      {% if member.instructor_title %}<h3>{{member.instructor_title}}</h3>{% endif %}
+        
+                      <p>{{member.instructor_bio_short|safe}}</p>
+                    </div>
+                  </div>
+                  <div class="row row-instructor-body">
+                    <div class="col">
+                      {% if member.instructor_bio_long %}
+                        {{ member.instructor_bio_long|safe }}
+                      {% endif %}
+                      {% if not member.instructor_bio_long %}
+                        {{ member.instructor_bio_short|safe}}
+                      {% endif %}
+                    </div>
+                  </div>        
+                </div>
+              </div>
+            </div>
+          </div>
+          {% endfor %}
+          {% endif %}
+
+        </div>
+      </section>
+    </div>
+{% else %}
     <div id="main" class="product-page">
       <section class="hero-block">
         <div class="container">
@@ -153,7 +293,7 @@
                   <div class="member-info">
                     <h3 class="name">{{ member.instructor_name }}</h3>
                     {% if member.instructor_title %}<h4 class="title">{{ member.instructor_title }}</h4>{% endif %}
-                    <div class="description">{{ member.instructor_bio_long|safe }}</div>
+                    <div class="description">{{ member.instructor_bio_short|safe }}</div>
                   </div>
                 </div>
               </li>
@@ -185,4 +325,5 @@
         </div>
       </section>
     </div>
+{% endif %}
 {% endblock %}
