css import changes

--- a/frontend/public/scss/featured-product-cards.scss
+++ b/frontend/public/scss/featured-product-cards.scss
@@ -1,4 +1,20 @@
 // sass-lint:disable mixins-before-declarations
+// TODO: `featured-product-section h1` should replace `course-section h1` in home.css on feature merge
+.featured-product-section h1 {
+  color: $home-page-header-blue;
+  text-align: left;
+  font-size: 25px;
+  margin: 0;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  padding: 60px 0 33px 0;
+  @include media-breakpoint-down(sm) {
+    font-size: 30px;
+    padding: 20px 0;
+  }
+}
+
 .featured-product-section-container {
   width: 100%;
   display: flex;
