Fixes text alignment for the Enrolled button, hide the upsell card in the new design

--- a/frontend/public/scss/product-page/product-details.scss
+++ b/frontend/public/scss/product-page/product-details.scss
@@ -278,6 +278,11 @@
         height: 50px;
         width: 100%;
         padding: 0!important;
+        text-align: center;
+      }
+
+      a.btn-enrollment-button {
+        padding: 9px 0 0 0 !important;
       }
 
       .enrollment-info-box, .program-info-box {
