--- a/frontend/public/scss/featured-product-cards.scss
+++ b/frontend/public/scss/featured-product-cards.scss
@@ -1,4 +1,7 @@
-// sass-lint:disable mixins-before-declarations
+@import "variables";
+@import "~bootstrap/scss/bootstrap";
+@import "~video.js/dist/video-js";
+
 // TODO: `featured-product-section h1` should replace `course-section h1` in home.css on feature merge
 .featured-product-section h1 {
   color: $home-page-header-blue;
