--- a/frontend/public/scss/variables.scss
+++ b/frontend/public/scss/variables.scss
@@ -42,3 +42,9 @@ $sirocco: #465a5b;
 $brand-button-bg: #a41e34;
 $brand-lighter-bg: #c5264e;
 $brand-darker-bg: #a31f34;
+
+$home-page-header-blue: #03152D;
+$home-page-grey-text: #6F7175;
+$home-page-grey-lite: #F0F5F7;
+$home-page-border-grey: #DFE5EC;
+$home-page-dark-blue: #000C1B;
