Fixes some additional styling things, adds enrollment dialog back in (still not done though)

--- a/frontend/public/scss/product-page/program-courses.scss
+++ b/frontend/public/scss/product-page/program-courses.scss
@@ -39,7 +39,7 @@ p.program-type-badge {
         margin: 0;
         padding: 0;
         flex-flow: row wrap;
-        justify-content: space-between;
+        justify-content: left;
     }
 
     li {
