--- a/frontend/public/scss/home-page-video-component.scss
+++ b/frontend/public/scss/home-page-video-component.scss
@@ -1,3 +1,7 @@
+@import "variables";
+@import "~bootstrap/scss/bootstrap";
+@import "~video.js/dist/video-js";
+
 .home-page-video-row {
     width: 100%;
     margin: 0;
@@ -5,6 +9,9 @@
     display: flex;
     justify-content: center;
     align-content: center;
+  @include media-breakpoint-down(sm) {
+      width: 100%;
+    }
   .home-page-video-container {
     margin-top: -60px;
     width: 1440px;
