enrolling should be sufficient on the program infocard, fixing regressions elsewhere

--- a/frontend/public/scss/product-page/product-details.scss
+++ b/frontend/public/scss/product-page/product-details.scss
@@ -641,6 +641,7 @@ div.certificate-pricing{
   line-height: 20px;
   text-decoration: underline;
   margin-bottom: 0;
+  text-align: left;
 
   &:hover{
     text-decoration: none !important;
