--- a/cms/templates/product_page.html
+++ b/cms/templates/product_page.html
@@ -15,13 +15,6 @@
         <div class="row d-flex flex-row">
           <div class="col flex-grow-1" id="product-details">
             <div class="text">
-              {% if page.is_program_page %}
-                {% if page.product.program_type %}
-                <p class="program-type-badge">
-                  <span class="badge badge-dark badge-program-type">{{ page.product.program_type }}</span>
-                </p>
-                {% endif %}
-              {% endif %}
               <h1>{{ page.title }}</h1>
               {# Description field contents are already rendered wrapped in a <p> tag #}
               
@@ -32,7 +25,6 @@
               <nav id="tab-bar">
                 <ul class="nav">
                   {% if page.about %}<li class="nav-item"><a href="#about-this-class">About</a></li>{% endif %}
-                  {% if page.is_program_page %}<li class="nav-item"><a href="#program-courses">Courses</a></li>{% endif %}
                   {% if page.what_you_learn %}<li class="nav-item"><a href="#what-youll-learn">What you'll learn</a></li>{% endif %}
                   {% if instructors %}<li class="nav-item"><a href="#instructors">Instructors</a></li>{% endif %}
                   {% if page.faq_url %}<li class="nav-item"><a href="{{page.faq_url}}" target="_blank">FAQs</a></li>{% endif %}
@@ -43,65 +35,12 @@
                 {{ page.about | richtext | expand }}
               </section>{% endif %}
 
-              {% if page.is_program_page %}
-              <section class="program-courses-container" id="program-courses">
-                {% if page.product.required_courses %}
-                <h2>{{ page.product.required_title }}</h2>
-
-                <ul>
-                  {% for course in page.product.required_courses %}
-                  <li> 
-                    <div class="program-course-card">
-                      <img src="{% feature_img_src member.feature_image %}" alt="">
-                      <div class="program-course-card-info">
-                        <h4 class="startdate">
-                          {% if course.first_unexpired_run.start_date %}
-                            Starts {{ course.first_unexpired_run.start_date }}
-                          {% else %}
-                            Starts Anytime 
-                          {% endif %}
-                        </h4>
-                        <h3 class="title">{{ course.title }}</h3>
-                      </div>
-                    </div>
-                  </li>
-                  {% endfor %}
-                </ul>
-                {% endif %}
-
-                {% if page.product.elective_courses %}
-                <h2 class="electives-title">{{ page.product.elective_title }}</h2>
-
-                <ul>
-                  {% for course in page.product.elective_courses %}
-                  <li> 
-                    <div class="program-course-card">
-                      <img src="{% feature_img_src member.feature_image %}" alt="">
-                      <div class="program-course-card-info">
-                        <h4 class="startdate">
-                          {% if course.first_unexpired_run.start_date %}
-                            Starts {{ course.first_unexpired_run.start_date }}
-                          {% else %}
-                            Starts Anytime 
-                          {% endif %}
-                        </h4>
-                        <h3 class="title">{{ course.title }}</h3>
-                      </div>
-                    </div>
-                  </li>
-                  {% endfor %}
-                </ul>
-                {% endif %}
-
-              </section>
-              {% endif %}
-
               {% if page.what_you_learn %}<section class="what-youll-learn about-richtext-container" id="what-youll-learn">
                 <h2>What you&apos;ll learn</h2>
                 {{ page.what_you_learn |richtext }}
               </section>{% endif %}
     
-              {% if instructors %}
+              {% if instructors or page.faculty_members %}
               <section class="faculty-section" id="instructors">
                 <div class="container">
                   <h2>{{ page.faculty_section_title }}</h2>
@@ -127,7 +66,6 @@
               </section>
               {% endif %}
 
-              {% if page.is_course_page %} 
               <section class="ofac-message border">
                 <div class="container">
                   <h2>Who can take this course?</h2>
@@ -135,7 +73,7 @@
                   <p>Because of U.S. Office of Foreign Assets Control (OFAC) restrictions and other U.S. federal regulations, learners residing in one or more of the following countries or regions will not be able to register for this course: Iran, Cuba, Syria, North Korea and the Crimea, Donetsk People's Republic and Luhansk People's Republic regions of Ukraine.</p>
                 </div>
               </section>
-              {% endif %}
+        
             </div>
           </div>
           <div class="col" id="product-info-box">
@@ -148,27 +86,60 @@
                 {% endif %}
               </div>
 
+              {% if page.course %}
               <div class="stats-row product-info-box-body">
-                {% if page.is_course_page %}
                 <input id="courseId" type="hidden" value="{{page.course.readable_id}}" />
-                {% endif %}
-
-                {% if page.is_program_page %}
-                <input id="programId" type="hidden" value="{{page.program.readable_id}}" />
-                {% endif %}
-
                 <div class="w-100" id="productDetailEnrollment"></div>
               </div>
-
-              {% if page.is_course_page %}
               <div class="stats-row">
                 <div class="w-100" id="upsellCard"></div>
               </div>
               {% endif %}
             </div>
           </div>
+
+          {% if instructors %}
+          {% for member in instructors %}
+          <div class="modal instructor-modal" tabindex="-1" id="instructor-modal-{{ member.id }}">
+            <div class="modal-dialog modal-dialog-centered">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title">{{ member.instructor_name }}</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close" onClick="$('#instructor-modal-{{ member.id }}').modal('hide');">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                  <div class="row d-flex">
+                    <div class="col col-instructor-photo">
+                      <img class="img-thumbnail" src="{% feature_img_src member.feature_image %}" alt="Photo for {{member.instructor_name}}" />
+                    </div>
+                    <div class="col col-instructor-title flex-grow-1">
+                      <h2>{{member.instructor_name}}</h2>
+                      {% if member.instructor_title %}<h3>{{member.instructor_title}}</h3>{% endif %}
+        
+                      <p>{{member.instructor_bio_short|safe}}</p>
+                    </div>
+                  </div>
+                  <div class="row row-instructor-body">
+                    <div class="col">
+                      {% if member.instructor_bio_long %}
+                        {{ member.instructor_bio_long|safe }}
+                      {% endif %}
+                      {% if not member.instructor_bio_long %}
+                        {{ member.instructor_bio_short|safe}}
+                      {% endif %}
+                    </div>
+                  </div>        
+                </div>
+              </div>
+            </div>
+          </div>
+          {% endfor %}
+          {% endif %}
+
         </div>
-      </div>
+      </section>
     </div>
 {% else %}
     <div id="main" class="product-page">
