--- a/frontend/public/scss/home-page-hero.scss
+++ b/frontend/public/scss/home-page-hero.scss
@@ -5,21 +5,26 @@
   width: 100%;
   height: 600px;
   @include media-breakpoint-down(sm) {
-      width: 100%;
-      height: 300px;
-    }
+    width: 100%;
+    height: 300px;
+  }
 
   .home-page-hero {
     max-width: 1440px;
     max-height: 600px;
     flex-shrink: 0;
-    background: url("/static/images/home-page-hero-image.png") lightgray center center / 100% 100% no-repeat content-box;
+    background: url("/static/images/home-page-hero-image.png") lightgray 50% 50% / cover no-repeat content-box;
     padding-bottom: 0;
+    margin: 0 auto;
+    @include media-breakpoint-down(md) {
+      max-width: 100%;
+    }
+
     @include media-breakpoint-down(sm) {
       max-width: 100%;
       max-height: 147px;
-      background-size: 100% 147px;
       background-position-y: top;
+      background-position-x: 0;
     }
 
     .home-page-hero-overlay {
@@ -129,5 +134,5 @@
         }
       }
     }
-    }
   }
+}
